exports[`<TabItem /> active=false renders correctly 1`] = `
<a
  className="container">
  <span
    active={false} />
</a>
`;

exports[`<TabItem /> active=true renders correctly 1`] = `
<a
  className="container active">
  <span
    active={true} />
</a>
`;
